# leworldmodel-judge

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  hf-jobs-benchmark.yml
artifacts/: README.md
artifacts/demo-pass-4/: baselines.jsonl  demo-artifact-comparison.csv  demo-artifact.md  judge.jsonl  prefixes.jsonl  rollouts.jsonl  summary.json
artifacts/demo-pass-4/report/: family-report.md
artifacts/hard-family-real-fresh-capture-2026-07-13/: baselines.jsonl  demo-artifact-comparison.csv  demo-artifact-push-v3-hard-disagreement-pack.csv  demo-artifact-score-replay.csv  demo-artifact.md  judge-composite.jsonl  judge-hybrid.jsonl  latent-cache.jsonl  prefixes.jsonl  provenance.json  summary-composite.json  summary.json
artifacts/hard-family-real-fresh-capture-2026-07-13/report/: family-report.md
artifacts/hard-family-real-held-out-2026-04-28/: demo-artifact-comparison.csv  demo-artifact-push-v3-hard-disagreement-pack.csv  demo-artifact-score-replay.csv  demo-artifact.md  judge-composite.jsonl  judge-hybrid.jsonl  latent-cache.jsonl  prefixes.jsonl  summary-composite.json  summary.json
artifacts/hard-family-real-held-out-2026-04-28/report/: family-report.md
artifacts/hard-family-real-smoke-2026-04-23/: baselines.jsonl  judge.jsonl  prefixes.jsonl  summary.json
artifacts/hard-family-real-smoke-2026-04-23-v2/: baselines.jsonl  prefixes.jsonl  rollouts.jsonl  summary.json
artifacts/hard-family-real-smoke-2026-04-23-v2/report/: family-report.md
artifacts/hard-family-synthetic-benchmark-2026-04-23/: baselines.jsonl  judge.jsonl  prefixes.jsonl  rollouts.jsonl  summary.json
artifacts/hard-family-synthetic-benchmark-2026-04-23-v2/: baselines.jsonl  judge.jsonl  prefixes.jsonl  summary.json
artifacts/hard-family-synthetic-benchmark-2026-04-23-v2/report/: family-report.md
artifacts/multitask-real-smoke-2026-04-23/: baselines.jsonl  judge.jsonl  prefixes.jsonl  rollouts.jsonl  summary.json
demo/: README.md
docs/: architecture.md  benchmark.md  contracts.md  method.md  roadmap.md  vision.md
docs/paper/: Makefile  README.md  main.tex  references.bib
docs/paper/figures/: make_figures.py
docs/rfcs/: README.md  RFC-001-problem-shape.md  RFC-002-why-leworldmodel.md  RFC-003-environment-choice.md  RFC-004-judge-signal-design.md  RFC-005-benchmark-and-baselines.md  RFC-006-demo-surface.md  RFC-007-v1-vs-v2-boundary.md  RFC-008-result-and-artifact-contracts.md  RFC-009-public-positioning-and-claim-discipline.md  RFC-010-repo-restructure.md  RFC-011-hf-jobs-pipeline.md
docs/spec/: CLI-COMMAND-SPEC.md  DATASET-CONTRACT.md  DEEPENING-PASS-1.md  DEEPENING-PASS-2.md  DEEPENING-PASS-3.md  DEEPENING-PASS-4.md  DEEPENING-PASS-5.md  DEMO-CONTRACT.md  EVAL-CONTRACT.md  FIRST-THREE-EXPERIMENTS.md  HARD-FAMILY-BENCHMARK-2026-04-23.md  IMPLEMENTATION-PLAN.md  JEPA-FAITHFULNESS-UPGRADE-PLAN.md  JUDGE-SIGNAL-CONTRACT.md  MULTITASK-REAL-SMOKE-2026-04-23.md  MVP-STATUS.md  PRODUCT-SPEC.md  RESEARCH.md  RESULT-SCHEMA-CONTRACT.md  SCHEDULE.md  SYSTEM-SPEC.md
jobs/: README.md  intern_ops.py  launch.py  run_benchmark.py
jobs/prompts/: intern-operator.md  intern-reviewer.md
results/: README.md
scripts/: build_latent_cache.py  build_prefixes.py  collect_rollouts.py  evaluate.py  render_demo.py  render_family_report.py  run_baselines.py  run_judge.py
src/leworldmodel_judge/: __init__.py  __main__.py  _math.py  baselines.py  cli.py  collect.py  data.py  demo.py  evaluate.py  io.py  judge.py  labels.py  latents.py  metrics.py  plotting.py  prefixes.py  report.py  schema.py  tasks.py
tests/: conftest.py  test_calibration_and_reports.py  test_cli.py  test_eval_metrics.py  test_latent_and_demo.py  test_pipeline.py  test_public_api.py  test_schema.py  test_smoke.md  test_trajectory_families.py
